# ws_cobot2_pjt

./: .gitignore  README.md  start_all.sh  start_get_keyword.sh  start_jenga.sh  start_voice_pick.sh  terminator_jenga.config  update_script.py
.agents/: AGENTS.md
backend/: cobot.db  requirements.txt  start_backend.sh
backend/app/: auth.py  crud.py  database.py  main.py  models.py  ros_bridge.py  schemas.py
backend/app/routers/: auth.py  qc.py  resources.py  robot.py  users.py  voice.py
conveyor_serial/: PORT_SETUP.txt  conveyor_control.py  conveyor_serial.ino
docs/: voice_hmi_workflow.md
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  qc.ts  resources.ts  robot.ts  users.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: DirectRobotActionButtons.tsx  EmergencyStopButtons.tsx  HmiAlertModal.tsx  JengaMapVisualizer.tsx  LoginPage.tsx  Pagination.tsx  ResourceFormModal.tsx  ResourceTable.tsx  SearchBar.tsx  SortableTh.tsx  StatusBadge.tsx  SummaryCards.tsx  UsersPanel.tsx  VoiceStartButton.tsx
frontend/src/hooks/: useRobotStatus.ts  useVoiceBridge.ts
frontend/src/pages/: HomeScreen.tsx  InventoryPage.tsx  QcPage.tsx  RobotDashboardPage.tsx  WorkSessionPage.tsx
frontend/src/theme/: ThemeContext.tsx
frontend/src/types/: auth.ts  inventoryLog.ts  qc.ts  resource.ts
frontend/src/utils/: csv.ts  sort.ts
scripts/: gen_terminator_layout.py
src/DoosanBootcamInt1/dsr_rokey2/: package.xml  setup.py
src/cobot1/: package.xml  setup.py
src/cobot1/cobot1/: move_basic.py  move_periodic.py
src/cobot2_ws/m0609_rg2_bringup/: CMakeLists.txt  package.xml
src/cobot2_ws/m0609_rg2_bringup/launch/: bringup.launch.py  bringup_camera.launch.py
src/cobot2_ws/m0609_rg2_bringup/meshes/: conveyor_belt.stl  generate_hammer.py  generate_screwdriver.py  hammer.stl  mount_bracket.stl  screwdriver.stl  이름없음-몸통.stl
src/cobot2_ws/m0609_rg2_bringup/rviz/: default.rviz
src/cobot2_ws/m0609_rg2_bringup/scripts/: gripper_joint_state_publisher.py  gripper_virtual_node.py  hand_avoidance.py  hand_publisher.py  move_slow_demo.py  moveit_joint_line_demo.py  planner.py  scene_builder.py  tool_pick_yolo_target.py
src/cobot2_ws/m0609_rg2_bringup/urdf/: m0609_with_rg2.urdf.xacro  m0609_with_rg2_camera.urdf.xacro  onrobot_rg2.xacro  onrobot_rg2_model_macro.xacro  realsense_bracket.urdf.xacro
src/cobot2_ws/m0609_rg2_moveit/: CMakeLists.txt  package.xml
src/cobot2_ws/m0609_rg2_moveit/config/: joint_limits.yaml  kinematics.yaml  m0609_rg2.srdf  moveit_controllers.yaml  ompl_planning.yaml
src/cobot2_ws/m0609_rg2_moveit/launch/: movegroup_only.launch.py  moveit.launch.py  moveit_camera.launch.py
src/cobot2_ws/object_detection/: setup.py
src/cobot2_ws/object_hand/: package.xml  setup.cfg  setup.py  test_hand_yolo.py
src/yolov8_ws/: defect_inspector_node.py  yolo_inference_node.py
(+53 files in other folders)
