<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m0609_rg2_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for Doosan M0609 with OnRobot RG2 gripper</description>
  <maintainer email="your@email.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime dependency -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- reference package -->
  <exec_depend>dsr_description2</exec_depend>
  <exec_depend>onrobot_rg_description</exec_depend>
  <exec_depend>onrobot_rg_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
